implemented message and score jaggaer api